# Zygisk-DispatchModule

./: .gitignore  40  README.md  README_CN.md  android-arm64-toolchain.cmake  auto_commit_push.sh  build.gradle  build_in_container.sh  crash_log.txt  crash_summary.txt  find_offset.py  inspect_vtable.py  list_apk_contents.py  lookup_symbol.py  module.prop  pack_module.sh  pgh.sh
.agents/: AGENTS.md
.github/workflows/: build.yml
docs/: 911_DISPATCH.md  BASELINE.md  CRASH_STATUS.md  GAMEPLAY_SIMPLIFY.md  MEMORY_LIFECYCLE.md  MODEL.md  MODULE_LAYOUT.md
rust/: Cargo.toml  build_rust.sh
rust/.cargo/: config.toml
rust/crates/dispatch-case/: Cargo.toml
rust/crates/dispatch-case/src/: department.rs  engine_event_map.rs  incident.rs  ingress.rs  lib.rs  perception.rs  playbook.rs  record.rs  report_channel.rs  spawn_policy.rs  state.rs  store.rs  timing.rs  weapon.rs  witness_report.rs
rust/crates/dispatch-core/: Cargo.toml
rust/crates/dispatch-core/src/: bus.rs  lib.rs  loader.rs  registry.rs  signal.rs
rust/crates/dispatch-engine/: Cargo.toml
rust/crates/dispatch-engine/src/: entity.rs  event_vtables.rs  ffi_types.rs  lib.rs  lifecycle.rs  pool.rs  probe.rs  symbols.rs  xdl.rs
rust/crates/dispatch-exec/: Cargo.toml
rust/crates/dispatch-exec/src/: arrest.rs  attack.rs  attack_foot.rs  attack_vehicle.rs  case_inputs.rs  coordinator.rs  dispatch_disturbance.rs  effect_apply.rs  emergency_services.rs  escaper.rs  ffi.rs  game.rs  lib.rs  models.rs  reroute.rs  response.rs  snapshot.rs  spawn.rs  spawn_gate.rs  staging.rs  tasks.rs  threat.rs  timing.rs  vehicle_spawn.rs
rust/crates/dispatch-hook/: Cargo.toml
rust/crates/dispatch-hook/src/: buoyancy_gate.rs  causation.rs  civilian_report.rs  config.rs  control_sub_task_gate.rs  event_perception.rs  event_scan_gate.rs  gate.rs  install.rs  lib.rs  lifecycle.rs  manage_tasks_gate.rs  model_bridge.rs  orig_slot.rs  record_relationship_gate.rs  runtime.rs  scripts.rs  spawn.rs  static_counter_gate.rs  wanted_population.rs  witness.rs  witness_scan.rs
rust/crates/dispatch-hook/src/inline/: hook.rs  mod.rs  read.rs  relocate.rs
rust/crates/dispatch-model/: Cargo.toml
rust/crates/dispatch-model/src/: case.rs  effects.rs  lib.rs  report.rs  signal.rs  tests.rs  threat.rs  tick.rs  world.rs
rust/crates/dispatch-native/: Cargo.toml  build.rs
rust/crates/dispatch-native/src/: lib.rs
rust/crates/dispatch-zygisk/: Cargo.toml  build.rs
rust/crates/dispatch-zygisk/cpp/: bionic_stubs.cpp  exports.lds  zygisk_entry.cpp
rust/crates/dispatch-zygisk/src/: lib.rs
scratch/: deps_inventory.md  hooks_surface.md  so_symbols.txt
scripts/: analyze_all_tombstones.py  capture_saveload_logcat.sh  collect_tombstones.sh  enter_sandbox.sh  extract_dispatch.py  get_logcat.sh  get_tombstone.sh  split_cop_attack.py  split_cop_attack_pass.py  split_cop_attack_vehicle.py  split_dispatch.py  split_dispatch_tick.py  split_dispatch_tick_main.py  split_dispatch_tick_states.py  split_hook_install.py  split_module.py  stress_test.py  tone_down_comments.py  trigger_wait_build.sh  watch_tombstones.sh
src/main/cpp/: CMakeLists.txt  dispatch_cop_attack.cpp  dispatch_cop_attack_pass.cpp  dispatch_cop_attack_pass_foot.cpp  dispatch_cop_attack_pass_vehicle.cpp  dispatch_cop_attack_state.cpp  dispatch_cop_attack_vehicle_order.cpp  dispatch_cop_attack_vehicle_stuck.cpp  dispatch_cop_attack_vehicle_unstuck.cpp  dispatch_cop_response.cpp  dispatch_cop_state.cpp  dispatch_emergency.cpp  dispatch_emergency_services.cpp  dispatch_heli_support.cpp  dispatch_hit_and_run.cpp  dispatch_hooks.cpp  dispatch_logic.cpp  dispatch_ped_registry.cpp  dispatch_police_spawn.cpp  dispatch_reroute.cpp  dispatch_spawn_hooks.cpp  dispatch_threat.cpp  dispatch_tick.cpp  dispatch_tick_civilian.cpp  dispatch_tick_main.cpp  dispatch_tick_state_cleanup.cpp  dispatch_tick_state_idle.cpp  dispatch_tick_state_on_scene.cpp  dispatch_tick_state_timing.cpp  dispatch_tick_states.cpp  dispatch_timing.cpp  dispatch_vehicle_escaper.cpp  ecs_engine.hpp  ecs_systems.cpp  hook_install.cpp  hooks_stability.cpp  manage_tasks_guard.cpp  module.cpp  module.cpp.bak  pointer_sanitizer_vma.cpp  (+2 more)
src/main/cpp/include/: dispatch_cop_attack_internal.hpp  dispatch_cop_attack_vehicle_internal.hpp  dispatch_cop_state.hpp  dispatch_emergency_services.hpp  dispatch_heli_support.hpp  dispatch_hit_and_run.hpp  dispatch_ped_registry.hpp  dispatch_police_spawn.hpp  dispatch_reroute.hpp  dispatch_threat.hpp  dispatch_tick_internal.hpp  dispatch_timing.hpp  dispatch_types.hpp  dispatch_vehicle_escaper.hpp  game_config.hpp  game_types.hpp  hooks_stability_types.hpp  log.hpp  manage_tasks_guard.hpp  mod_shared.hpp  pointer_sanitizer.hpp  vanilla_qol_fixes.hpp
tombstones_temp/: .watch_seen_ids  parse_crashes.py
