[package]
name = "dispatch-exec"
version.workspace = true
edition.workspace = true

[dependencies]
dispatch-case = { path = "../dispatch-case" }
dispatch-core = { path = "../dispatch-core" }
dispatch-engine = { path = "../dispatch-engine" }
dispatch-model = { path = "../dispatch-model" }
slotmap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["max_level_warn", "release_max_level_off"] }