[package]
name = "dispatch-hook"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
dispatch-case = { path = "../dispatch-case" }
dispatch-core = { path = "../dispatch-core" }
dispatch-engine = { path = "../dispatch-engine" }
dispatch-exec = { path = "../dispatch-exec" }
libc = { workspace = true }
tracing = { workspace = true, features = ["max_level_warn", "release_max_level_off"] }