[package]
name = "dispatch-model"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Pure-logic dispatch product model (zero FFI)"

[dependencies]
# Intentionally empty: pure SNAPSHOT → COMPUTE → COMMIT; no libc/android/engine deps.
